<resources>
    <string name="app_name">Stile Mediterraneo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--  Navigation drawer stringd-->

    <string name="info_title">Informazioni</string>
    <string name="info_inside">Descrizione</string>
    <string name="info_link">Fondazione Dieta</string>

    <string name="stats_title">Statistiche</string>
    <string name="last_week">Scorsa settimana</string>
    <string name="last_month">Scorso mese</string>
    <string name="total">Totali</string>

    <string name="credits_name">Crediti</string>
    <string name="developers_credits">Sviluppatori</string>
    <string name="icons_credits">Icone</string>

    <!-- credits strings -->
    <string name="icon_credits_text">Tutte le icone di questa applicazione (escluse quelle fornite da Android) sono state fornite sotto licenza CC 3.0 da:</string>
    <string name="return_button">OK</string>
    <string name="title_activity_internal_info">InternalInfoActivity</string>

    <!-- dev strings -->
    <string name="dev_presentation">Ciao! Siamo un gruppo di sviluppatori che si sono divertiti a fare questa applicazione per un Hackthon organizzato durante gli ITCdays2016 a Povo(TN). Puoi contattarci tramite mail:</string>
    <string name="dev_github">Puoi trovare il codice di questa applicazione su GitHub:</string>

    <!-- info string -->
    <string name="dev_diet_info">La dieta mediterranea è uno stile di vita, non è una restrizione alimentare adottata per perdere peso. In questo regime alimentare viene data alla parola \'dieta\' il significato che aveva la parola da cui deriva: \'diaita\' in greco significa \'modo di vivere\'. Quest\'app ti aiuta a seguire questo stile alimentare il più fedelmente possibile, senza darti alcun tipo di restrizione, nel modo più semplice possibile."</string>
    <string name="diet_fundation">La Dieta Mediterranea è l\'insieme delle abitudini alimentari dei popoli del bacino del Mediterraneo, che si sono consolidate nei secoli e sono rimaste pressoché immutate fino al boom economico degli anni \'50.
Questo insieme di abitudini consiste principalmente nel consumo abbondante di: \n1) Pane \n2) Pasta \n3) Verdure \n4) Insalate \n5) Legumi \n6) Frutta \n7) Frutta secca.\n
Inoltre, le caratteristiche della dieta comprendono un consumo moderato di pesce, carne bianca, latticini e uova. Il consumo di carne rossa e vino è limitato rispetto alle diete di altre zone del mondo.
Per garantire l\'apporto di grassi, tra i popoli del Mediterraneo è diffuso il consumo di olio d\'oliva, che contiene grassi di qualità superiore, meno nocivi di quelli animali, e anzi salutari per l\'organismo.
La Dieta Mediterranea presenta le seguenti caratteristiche fondamentali:
\n1) Basso contenuti di acidi grassi saturi \n2) Ricchezza di carboidrati e fibra \n3) Alto contenuto di acidi grassi monoinsaturi (derivati principalmente dall\'olio d\'oliva). \nLiberamente adattato da: www.fondazionedietamediterranea.it</string>

    <!-- button string -->
    <string name="mangiato_button">Pasto inserito!</string>

    <!-- tutorial string -->
    <string name="tutorial_one">1) Trascina i cibi nell\'apposito box</string>
    <string name="tutorial_two">2a) Premi la spunta per salvare la selezione come pasto consumato...</string>
    <string name="tutorial_three">2b) ...oppure premi il punto di domanda per sapere quali cibi, tra quelli che hai scelto, sono più importanti per te in questo momento!\nBuon appetito!</string>
</resources>
